feat: update title and favicon

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday Presh</title>
+  <title>Happy Birthday Emma</title>
   <meta name="description" content="Happy Birthday Ao Presh">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
-  <link rel="shortcut icon" type="image/png" href="/img/ao presh.jpg" />
+  <link rel="shortcut icon" type="image/png" href="/img/emma.jpeg" />
   <link rel="stylesheet" href="style/style.css">
 </head>
 
