feat: update the html contents

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="one">
       <h1 class="one">
         <span data-node-name="greeting">Hey</span>
-        <span data-node-name="name">AoPresh</span>
+        <span data-node-name="name">Emma</span>
       </h1>
       <p class="two" data-node-name="greetingText">I really like you my bro!</p>
     </div>
@@ -47,7 +47,7 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/ao presh.jpg" alt="" class="lydia-dp" width="500px" data-node-name="imagePath">
+      <img src="img/emma.jpeg" alt="" class="lydia-dp" width="500px" data-node-name="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
@@ -130,7 +130,7 @@
       <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
-      <p class="p">With Love from <span><a class="link" href="https://www.twitter.com/VickyJayHack">VickyJay!</a></span></p>
+      <p class="p">With Love from <span><a class="link" href="https://www.x.com/henqsoft">henqsoft!</a></span></p>
     </div>
   </div>
 </body>
