--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css?family=Work+Sans:300,400"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" type="image/png" href="/img/emma.jpeg" />
+    <link rel="shortcut icon" type="image/png" href="/img/profile2.jpg" />
     <link rel="stylesheet" href="style/style.css" />
   </head>
 
